-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.1
-
Component/s: Go - Compiler
-
Patch Info:Patch Available
When following is written in .thrift input
typedef i32 MyType typedef map<MyType, i32> ComplexMapType
Generator builds the following:
type ComplexMapType map[int32]int32
This patch changes the type definition to be
type ComplexMapType map[MyType]int32
Since, there is really no need to resolve key type from MyType into int32. Compiler would throw error on lines like these:
complex_var = make(map[MyType]int32, size)
also,
var _key1 MyType
...
complex_var[_key1] = _val2
- relates to
-
THRIFT-2063 Go compiler cannot create code for maps with complex/binary keys
-
- Open
-