THRIFT-2112 Error in Go generator when using typedefs in map keys

Patch: Emir Habul